<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    tools:context=".PrecioActivity">

    <LinearLayout
        android:id="@+id/linearLayoutInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:text="@string/precio_id" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:text="0000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:layout_weight="0"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="01/01/2020 12:00:00"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescripcionArticulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInformacion" />

    <EditText
        android:id="@+id/edPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/introduzca_precio"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionArticulo" />

    <TextView
        android:id="@+id/tvNombreTienda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/seleccione_tienda_lista"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/edPrecio" />

    <ImageButton
        android:id="@+id/btnGrabarPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickGuardarPrecio"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarPrecio"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnEliminarPrecio"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:onClick="onClickEliminarPrecio"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrabarPrecio"
        app:layout_constraintTop_toTopOf="@id/btnGrabarPrecio" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        app:layout_constraintBaseline_toBaselineOf="@id/edPrecio"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tienda"
        app:layout_constraintBaseline_toBaselineOf="@id/tvNombreTienda"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lvTiendas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGrabarPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccioneTienda"
        tools:listitem="@layout/item_tienda_list_precio" />

    <TextView
        android:id="@+id/tvSeleccioneTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/seleccione_tienda"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreTienda" />

</androidx.constraintlayout.widget.ConstraintLayout>