<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    tools:context=".TiendaActivity">

    <LinearLayout
        android:id="@+id/linearLayoutInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:text="@string/tienda_id" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="0000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:layout_weight="0"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="01/01/2020 12:00:00"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edLatitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInformacion" />

    <EditText
        android:id="@+id/edLatitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16sp"
        android:ems="10"
        android:hint="@string/latitud"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/edLongitud"
        app:layout_constraintEnd_toStartOf="@+id/btnVerUbicacion"
        app:layout_constraintStart_toStartOf="@id/edLongitud"
        app:layout_constraintTop_toBottomOf="@+id/edNombre" />

    <EditText
        android:id="@+id/edLongitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/longitud"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/mapaFragment"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/edLatitud" />

    <fragment
        android:id="@+id/mapaFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8sp"
        app:layout_constraintBottom_toTopOf="@id/btnGrabarTienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edLongitud"
        app:uiZoomControls="true" />

    <ImageButton
        android:id="@+id/btnGrabarTienda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickGuardarTienda"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarTienda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnEliminarTienda" />

    <ImageButton
        android:id="@+id/btnEliminarTienda"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:onClick="onClickEliminarTienda"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrabarTienda" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/latitud"
        app:layout_constraintBaseline_toBaselineOf="@id/edLatitud"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/longitud"
        app:layout_constraintBaseline_toBaselineOf="@id/edLongitud"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnVerUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickVerUbicacion"
        android:src="@drawable/ic_mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edLatitud" />

</androidx.constraintlayout.widget.ConstraintLayout>