<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    tools:context=".ArticulosActivity">

    <LinearLayout
        android:id="@+id/linearLayoutInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:text="@string/articulo_id" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:text="0000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:layout_weight="0"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="01/01/2020 12:00:00"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/edDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInformacion" />

    <EditText
        android:id="@+id/edEan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/codigo_barras"
        android:onClick="onClickeditCodigoBarras"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edDescripcion" />

    <ImageView
        android:id="@+id/imgArticulo"
        android:layout_width="match_parent"
        android:layout_height="240sp"
        android:layout_marginTop="16dp"
        android:onClick="onClicFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edEan"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:srcCompat="@drawable/ic_photo_camera" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/codigo_barras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edEan"
        tools:layout_editor_absoluteY="110dp" />

    <ImageButton
        android:id="@+id/btnGrabarArticulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClicGuardar"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarArticulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnEliminarArticulo"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/btnEliminarArticulo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:onClick="onClicBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrabarArticulo"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/btnGrabarArticulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgArticulo">

        <TableLayout
            android:id="@+id/tablePrecios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fadeScrollbars="false"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideInset">

            <TableRow
                android:id="@+id/trCabecera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8sp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/thIdPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16sp"
                    android:text="@string/id_precio"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thNombreTienda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16sp"
                    android:text="@string/nombre_tienda"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowPrecio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/trIdPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16sp"
                    android:text="0000"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/trNombreTienda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16sp"
                    android:text="Tienda"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/trPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0,00"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnNuevoArticulo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickNuevoPrecio"
        android:scaleType="fitXY"
        android:tint="#000000"
        app:layout_constraintTop_toBottomOf="@id/imgArticulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_nuevo" />

</androidx.constraintlayout.widget.ConstraintLayout>